--- a/package.json
+++ b/package.json
@@ -7,10 +7,10 @@
     "@testing-library/jest-dom": "^6.9.1",
     "@testing-library/react": "^16.3.0",
     "@testing-library/user-event": "^13.5.0",
-    "i18next": "^25.7.0",
+    "i18next": "^21.10.0",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
-    "react-i18next": "^16.3.5",
+    "react-i18next": "^11.18.6",
     "react-icons": "^5.5.0",
     "react-scripts": "5.0.1",
     "react-select": "^5.10.2",
@@ -39,5 +39,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "typescript": "^4.9.5"
   }
 }
